# vigilant-funicular

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  TODO.md  cv-1.txt  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  migrate_to_turso.py  profile.example.json  setup-ssl.sh  sync-shared-modules.sh
audit/: findings.md
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_baseline.py
backend/src/applypilot/: __main__.py  config.py  database.py  llm.py  notifications.py  pipeline.py  scheduler.py
backend/src/applypilot/apply/: __init__.py  chrome.py  dashboard.py
backend/src/applypilot/config/: employers.yaml  searches.example.yaml
backend/src/applypilot/db/: __init__.py  engine.py
backend/src/applypilot/db/models/: __init__.py  discovery_run.py  job.py  user.py  user_job.py
backend/src/applypilot/discovery/: filter.py  jobspy.py  smartextract.py
backend/src/applypilot/enrichment/: detail.py  liveness.py
backend/src/applypilot/scoring/: __init__.py  cover_letter.py  filter_and_score.py  indexer.py  pdf.py  scorer.py  tailor.py  validator.py
backend/src/applypilot/web/: auth.py  core.py  middleware.py  schemas.py  server.py
backend/src/applypilot/web/routers/: __init__.py  apply.py  auth.py  config.py  jobs.py  pipeline.py  stream.py  stripe_router.py
backend/tests/: conftest.py  test_llm.py
backend/tests/enrichment/: test_liveness.py
backend/tests/integration/: test_multiuser_isolation.py  test_pipeline.py  test_tailor_flow.py  test_usage_rollback.py
backend/tests/scoring/: test_cover_letter.py  test_scorer.py  test_tailor.py  test_validator.py
backend/tests/web/: test_auth.py  test_rate_limiter.py  test_sse_stream.py  test_stripe_webhook.py
(+89 files in other folders)
