[project]
name = "applypilot"
version = "1.0.0"
description = "AI-powered end-to-end job application pipeline"
readme = {text = "AI-powered end-to-end job application pipeline.", content-type = "text/plain"}
license = "AGPL-3.0-only"
requires-python = ">=3.11"
authors = [{name = "Yassine Eluharani", email = "eluharani.yassine@gmail.com"}]
keywords = ["job-search", "automation", "ai", "resume", "apply", "job-application"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
]

dependencies = [
    "httpx>=0.24",
    "sqlmodel>=0.0.16",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13",
    "python-jobspy>=1.1",
    "beautifulsoup4>=4.12",
    "playwright>=1.40",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "pandas>=2.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    "rich>=13.0",
    "python-jose[cryptography]>=3.3",
    "pypdf>=4.0",
    "stripe>=7.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1"]
prod = []

[project.urls]
Homepage = "https://github.com/yassine-eluharani/applypilot"
Repository = "https://github.com/yassine-eluharani/applypilot"
Issues = "https://github.com/yassine-eluharani/applypilot/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/applypilot"]

[tool.hatch.build]
artifacts = ["src/applypilot/config/*.yaml"]

[tool.ruff]
target-version = "py311"
line-length = 120
